# bookcaster

./: .gitignore  README.md  pyproject.toml
src/bookcaster/: __init__.py  llms.py  main.py  prompts.py  trait_guesser.py  utils.py
src/bookcaster/tts/: qwen3tts.py  tts_utils.py
