[project]
name = "bookcaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SnowFox4004", email = "manba@out" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "pydub>=0.25.1",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[project.scripts]
bookcaster = "bookcaster:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
